# squad

./: CONCEPT.md  DECISIONS.md  PLAN.md  README.md  pyproject.toml  squad.yaml
.github/workflows/: ci.yml  publish.yml
prompts/: coder.md  planner.md  principles.md  reviewer.md  scout.md  scribe.md  supervisor.md
src/codesquad/: __init__.py  agents.py  cli.py  compress.py  config.py  graph.py  intake.py  interceptor.py  router.py  rules.py  worktree.py
src/codesquad/templates/: codesquad.yaml
src/codesquad/templates/prompts/: supervisor.md
src/codesquad/tools/: docs.py  git.py  profile.py  shell.py  subtasks.py
src/squad/: agents.py  cli.py  compress.py  config.py  graph.py  interceptor.py  router.py  worktree.py
src/squad/tools/: docs.py  mcp.py  shell.py  subtasks.py
tests/: conftest.py  test_agents.py  test_compress.py  test_config.py  test_docs.py  test_git.py  test_graph.py  test_intake.py  test_interceptor.py  test_mcp.py  test_profile.py  test_router.py  test_rules.py  test_shell.py  test_subtasks.py  test_worktree.py
