[project]
name = "squad"
version = "0.1.0"
description = "Heterogeneous multi-agent squads: route deep-agent work across models by task type, with full traffic interception."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Nikola Stamatovic", email = "stamatmail@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ddgs>=6.0",
    "deepagents>=0.6.12",
    "langchain-litellm>=0.7.0",
    "langchain-mcp-adapters>=0.3.0",
    "langgraph>=1.2.9",
    "litellm>=1.91.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "trafilatura>=1.12",
    "typer>=0.26.8",
]

[project.scripts]
squad = "squad.cli:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
